2002-04-28  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* README: Made the indicated tools' version numbers match what
	is actually downloaded and installed.

2002-04-26  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* Makefile: The install target depends on install-check.
	Otherwise blindly following the instructions in the README leads
	to tears.

2002-04-25  Manish Singh  <yosh@gimp.org>

	* moduleinfo.py (head): eog requires libgnomeprint

Mon Apr 15 11:51:26 2002  Owen Taylor  <otaylor@redhat.com>

	* moduleinfo.py (head): Point glib, gtk+ at 2-0 branches.

2002-04-13  Alex Graveley  <alex@ximian.com>

	* moduleinfo.py (head): eel requires gail.

Sat Apr 13 11:04:46 2002  Owen Taylor  <otaylor@redhat.com>

	* moduleinfo.py (head): Point pango at pango-1-0, since
	pango HEAD is post GNOME-2.0.

2002-04-05  Alex Graveley  <alex@ximian.com>

	* jhbuild.py (do_shell): Impl to allow starting a new blessed
	shell from the command line.

2002-04-05  Jeffrey Stedfast  <fejj@ximian.com>

	* bootstrap.py (Bootstrap.build): s/zcat/gunzip -dc/ -
	unfortunately zcat does not work so well on Solaris. Hopefully I
	will not anger the gods by committing this :-)

2002-03-27  Manish Singh  <yosh@gimp.org>

	* install-check.c: check for *.c as well (gobject installs a .c
	file as a public header)

2002-03-20  Johan Dahlin  <jdahlin@telia.com>

	* jhbuild.py: if prefix don't exist, create it.

	* moduleinfo.py: Add gail as a dependency to gnome-media module.

	* moduleinfo.py: Add gnome-panel as a dependency to gnome-utils module.
	
	* moduleinfo.py: Add gnome-desktop as a dependency to
	gnome-control-center module.

2002-03-19  Manish Singh  <yosh@gimp.org>

	* install-check.c: So my assumption was wrong. Add cases for *.idl
	and orbit-idl-2

2002-03-18  James Henstridge  <james@daa.com.au>

	* moduleinfo.py: apply Greg Schafer's patch for the gnome1
	build rules.

2002-03-15  Manish Singh  <yosh@gimp.org>

	* Makefile