@@ -1,3 +1,10 @@
+2002-04-30  Malcolm Tredinnick <malcolm@commsecure.com.au>
+
+	* bootstrap.py: When there is an error downloading one of the
+	files in the bootstrap phase, report the error. Bitter
+	experience indicates that it might not be what you initially
+	expect.
+
 2002-04-28  Malcolm Tredinnick <malcolm@commsecure.com.au>
 
 	* README: Made the indicated tools' version numbers match what
